updated Chore spec
