# tmp/openapi.yaml
@@ -10,30 +10,30 @@ info:
   license:
     name: MIT
 servers:
-  - url: 'http://usmakestwo.com/chore/v1'
+  - url: 'http://usmakestwo.com/bankly/v1'
 paths:
   /chores:
     get:
       description: |
-        Retrieve all chores
-      summary: List all chores
-      operationId: listChores
+        Return chores matching a customer ID
+      summary: Chore by Customer ID
+      operationId: findChoreByCustomerId
       tags:
         - chores
       parameters:
-        - name: limit
+        - name: cust_id
           in: query
-          description: How many items to return at one time (max 100)
+          description: Customer Id for which to retrieve the account list
           required: false
           schema:
             type: integer
-      format: int32
+            format: int32
       security:
-        - chore_auth:
-            - 'read:chores'
+        - OAuth2:
+            - chore
       responses:
         '200':
-          description: An array of chores
+          description: Chores matching Customer ID
           content:
             application/json:
               schema:
@@ -41,13 +41,20 @@ paths:
                 $ref: '#/components/schemas/Chore'
               example:
                 - id: 1
+                  customerID: 1
                   name: Wash car
                   completed: true
-                  repeat: weekly
+                  recurrent: weekly
                 - id: 2
+                  customerID: 1
                   name: Vacuum room
                   completed: false
-                  repeat: daily
+                  recurrent: daily
+                - id: 3
+                  customerID: 1
+                  name: Clean room
+                  completed: false
+                  recurrent: monthly
         default:
           description: unexpected error
           content:
@@ -97,8 +104,8 @@ paths:
           schema:
             type: string
       security:
-        - chore_auth:
-            - 'read:chore'
+        - OAuth2:
+            - chore
       responses:
         '200':
           description: Expected response to a valid request
@@ -108,9 +115,10 @@ paths:
                 $ref: '#/components/schemas/Chore'
                 example:
                   id: 1
+                  customerID: 1
                   name: Wash Car
                   completed: true
-                  repeat: weekly
+                  recurrent: weekly
         default:
           description: unexpected error
           content:
@@ -138,8 +146,8 @@ paths:
           schema:
             type: string
       security:
-        - chore_auth:
-            - 'write:chore'
+        - OAuth2:
+            - chore
       responses:
         '200':
           description: Expected response to a valid request
@@ -163,30 +171,39 @@ paths:
           description: Service available
 components:
   securitySchemes:
-    chore_auth:
+    OAuth2:
       type: oauth2
-      description: This API uses OAuth 2 with the client credential grant flow.
       flows:
-        clientCredentials:
-          tokenUrl: 'https://localhost:6882/token'
-          scope:
-            'write:pets': modify pets in your account
-            'read:pets': read your pets
+        authorizationCode:
+          authorizationUrl: 'http://localhost:8080/oauth2/code'
+          tokenUrl: 'http://localhost:8080/oauth2/token'
+          scopes:
+            'read:chore': Grants read access
+            'write:chore': Grants write access
   schemas:
     Chore:
       required:
         - id
+        - customerID
         - name
         - completed
       properties:
         id:
+          description: Unique identifier for chore
+          type: integer
+          format: int64
+        customerID:
+          description: The customer ID related to each chore
           type: integer
           format: int64
         name:
+          description: The name of the chore
           type: string
         completed:
+          description: If the chore is completed
           type: boolean
-        repeat:
+        recurrent:
+          description: How often does the chore happen
           type: string
     Error:
       required:
